--- a/styles.css
+++ b/styles.css
@@ -1,15 +1,15 @@
-<<<<<<< HEAD
 :root {
   --font: system-ui;
   --max-width: 60ch;
+  --min-width: 68ch; /* Behalten aus main */
   --body-padding: 2rem;
-  --min-width: 68ch;
+
   --color-text: rgb(0, 0, 0, 0.9);
   --color-text-light: rgb(0, 0, 0, 0.6);
 }
 
 body {
-  width: min(var(--max-width), 100% - var(--body-padding));
+  width: min(var(--max-width), 100% - var(--body-padding), var(--min-width));
   margin: 0 auto;
   color: var(--color-text);
   font-family: var(--font);
@@ -19,9 +19,4 @@ footer {
   margin-top: 2rem;
   color: var(--color-text-light);
   font-size: 0.8rem;
-=======
-body {
-  margin: 0 auto;
-  width: min(100% - 2rem, 68ch);
->>>>>>> main
 }
